chromium-browser (74.0.3729.157-rpt2) buster; urgency=medium

  * v74.0.3729.180_mmal_3_21.patch

 -- Serge Schneider <serge@raspberrypi.org>  Wed, 12 Jun 2019 15:47:03 +0100

chromium-browser (74.0.3729.157-rpt1) buster; urgency=medium

  * v74.0.3729.150_mmal_3.20.patch
  * Use clang 9
  * Remove no longer needed patches.
  * ldflags.patch - revert new changes

 -- Serge Schneider <serge@raspberrypi.org>  Mon, 20 May 2019 16:54:32 +0100

chromium-browser (74.0.3729.157-0ubuntu1) eoan; urgency=medium

  * Upstream release: 74.0.3729.157

 -- Olivier Tilloy <olivier.tilloy@canonical.com>  Tue, 14 May 2019 22:48:28 +0200

chromium-browser (74.0.3729.131-0ubuntu2) eoan; urgency=medium

  * debian/control: remove libgnome-keyring-dev build dependency (LP: #1828192)
  * debian/rules: build with use_gnome_keyring=false
  * debian/known_gn_gen_args-*: change use_gnome_keyring build flag to false

 -- Olivier Tilloy <olivier.tilloy@canonical.com>  Wed, 08 May 2019 12:15:30 +0200

chromium-browser (74.0.3729.131-0ubuntu1) eoan; urgency=medium

  * Upstream release: 74.0.3729.131
    - CVE-2019-5824: Parameter passing error in media player.

 -- Olivier Tilloy <olivier.tilloy@canonical.com>  Wed, 01 May 2019 08:27:06 +0200

chromium-browser (74.0.3729.108-0ubuntu2) eoan; urgency=medium

  * debian/patches/flashplayer-syscall-restrictions-update.patch: added
    (LP: #1825497)

 -- Olivier Tilloy <olivier.tilloy@canonical.com>  Tue, 30 Apr 2019 09:50:17 +0200

chromium-browser (74.0.3729.108-0ubuntu1) eoan; urgency=medium

  * Bump version number for the new development release
    (Ubuntu 19.10, the Eoan EANIMAL)
  * debian/control: update Vcs-Bzr field
  * debian/patches/fix-extra-arflags.patch: updated

 -- Olivier Tilloy <olivier.tilloy@canonical.com>  Thu, 25 Apr 2019 12:43:58 +0200

chromium-browser (74.0.3729.108-0ubuntu0.19.04.1) disco; urgency=medium

  * Upstream release: 74.0.3729.108
    - CVE-2019-5805: Use after free in PDFium.